<resources>
    <string name="app_name">HelloAndroid</string>
    <string name="android_practice">Android practice</string>
    <string name="button_1">constraint_layout</string>
    <string name="button_2">button 2</string>
    <string name="button_3">button 3</string>
    <string name="button_4">button 4</string>
    <string name="button_5">button 5</string>
    <string name="button_6">button 6</string>
    <string name="button_7">button 7</string>
    <string name="button_8">button 8</string>
    <string name="button_9">button 9</string>
    <string name="button_10">button 10</string>
    <string name="hello">Hello!</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="or_connect_with">or connect with</string>
    <string name="signup_with_email">Signup with email</string>
    <string name="twitter">twitter</string>
    <string name="facebook">Facebook</string>
    <string name="aware">aware</string>

</resources>