<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    
    <ImageView
        android:id="@+id/logo"
        android:layout_width="148.9dp"
        android:layout_height="30.3dp"
        android:src="@mipmap/fill_1"
        android:layout_marginStart="113.1dp"
        android:layout_marginEnd="113.1dp"
        android:layout_marginTop="88dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/aware" />

    <EditText
        android:id="@+id/username"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="77.7dp"
        android:layout_marginStart="62.5dp"
        android:layout_marginEnd="62.5dp"
        android:hint="@string/username"
        android:background="@drawable/edit_text"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="12sp"
        app:layout_constraintTop_toTopOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:hint="@string/password"
        android:background="@drawable/edit_text"
        android:layout_marginTop="10dp"
        android:layout_marginStart="62.5dp"
        android:layout_marginEnd="62.5dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="12sp"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    
    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_me"
        android:layout_marginStart="80dp"
        android:textColor="@color/colorText"
        android:textSize="12sp"
        android:button="@drawable/check_box"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="22.5dp"
        android:checked="true"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/colorText"
        android:textSize="12sp"
        android:layout_marginEnd="80dp"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintBaseline_toBaselineOf="@id/checkbox"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/login"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="22.5dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:background="@drawable/login_button"
        android:textColor="@color/colorWhite"
        app:layout_constraintTop_toBottomOf="@id/checkbox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/or_connect_with"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_connect_with"
        android:textColor="@color/colorOrConnectWith"
        android:textSize="12sp"
        android:layout_marginTop="26.5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login"/>

    <ImageView
        android:id="@+id/fb"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:src="@mipmap/fb"
        android:layout_marginStart="80dp"
        android:layout_marginTop="29.5dp"
        app:layout_constraintTop_toBottomOf="@id/or_connect_with"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/facebook" />

    <ImageView
        android:id="@+id/tw"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:src="@mipmap/tw"
        android:layout_marginEnd="80dp"
        android:layout_marginTop="29.5dp"
        app:layout_constraintTop_toBottomOf="@id/or_connect_with"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/twitter" />

    <Button
        android:id="@+id/signup"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="85.5dp"
        android:layout_marginBottom="44.5dp"
        android:layout_marginStart="62.5dp"
        android:layout_marginEnd="62.5dp"
        android:text="@string/signup_with_email"
        android:textAllCaps="false"
        android:textColor="@color/colorButton"
        android:background="@drawable/signup_button"
        app:layout_constraintTop_toBottomOf="@id/fb"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>