<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="50dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginBottom="30dp"
        android:textAllCaps="false"
        android:text="@string/button_1" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginBottom="30dp"
        android:textAllCaps="false"
        android:text="@string/button_2" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginBottom="30dp"
        android:textAllCaps="false"
        android:text="@string/button_3" />

</LinearLayout>